# co-prompt

./: CHANGELOG.md  Justfile  README.md  cabal.project  co-prompt.cabal  flake.nix  overlay.nix
.github/workflows/: cabal.yml
app/: Main.hs
apps/cli-demo/: Main.hs
apps/fudgets-demo/: Main.hs
src/: CoPrompt.hs
src/CoPrompt/: FilePath.hs  Old.hs
