cabal-version:      2.4
name:               co-prompt
version:            0.1.0.0
-- description:
bug-reports:        https://github.com/solomon-b/co-prompt/
author:             ssbothwell
maintainer:         ssbothwell@gmail.com
category:           prompt, ui
extra-source-files: CHANGELOG.md

executable co-prompt
    main-is:          Main.hs
    build-depends:    base
                    , fudgets
    hs-source-dirs:   app
    default-language: Haskell2010
