cabal-version:      2.4
name:               co-prompt
version:            0.1.0.0
-- description:
bug-reports:        https://github.com/solomon-b/co-prompt/
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
category:           prompt, ui
extra-source-files: README.md

--------------------------------------------------------------------------------

common common-config
  build-depends:
    base >= 4.12 && < 5,

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules
    -Wno-star-is-type

  default-language:
    Haskell2010

  default-extensions:
    DeriveFunctor
    DerivingStrategies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    TypeFamilies

--------------------------------------------------------------------------------

library
  import:
    common-config
    
  exposed-modules:
    CoPrompt
    CoPrompt.Old
    CoPrompt.FilePath

  build-depends:
    containers,
    directory,
    filepath,
    free,
    machines,
    text,
    unix

  hs-source-dirs: src
 
--------------------------------------------------------------------------------

executable cli-demo
  import:
    common-config

  main-is:
    Main.hs

  build-depends:
    adjunctions,
    co-prompt,
    directory,
    distributive,
    filepath,
    free,
    machines,
    text,
    unix

  hs-source-dirs:   apps/cli-demo

--------------------------------------------------------------------------------

-- executable fudgets-demo
--   import:
--     common-config

--   main-is:
--     Main.hs
--   build-depends:
--     co-prompt,
--     fudgets,
--     gtk3

--   hs-source-dirs:   apps/fudgets-demo
